# RenderWidgetWithVulkan

./: .gitmodules  README.md
code/: CMakeLists.txt
code/Inc/: AppDispatchTable.h  CMakeLists.txt  DebugUtils.h  Device.h  DrawAttachmentShadingRateThread.h  DrawPipelineShadingRateThread.h  DrawTextureThread.h  DrawTriangleThread.h  GraphicsDevice.h  Log.h  Mesh.h  PhysicalDevice.h  PipelineDrawTexture.h  PipelineTemplate.h  PipelineTest.h  PipelineVariableShadingRate.h  RenderBase.h  RenderPassShadingRate.h  RenderPassTemplate.h  RenderPassTest.h  ShaderModuleFactory.h  Swapchain.h  Thread.h  Utils.h  VulkanInitializers.h  WindowImpl.h  WindowTemplate.h
code/Shaders/: DrawTextureTest.frag  compile.bat
code/Src/: DebugUtils.cpp  Device.cpp  DrawAttachmentShadingRateThread.cpp  DrawPipelineShadingRateThread.cpp  DrawTextureThread.cpp  DrawTriangleThread.cpp  GraphicsDevice.cpp  Main.cpp  PhysicalDevice.cpp  PipelineDrawTexture.cpp  PipelineTemplate.cpp  PipelineTest.cpp  PipelineVariableShadingRate.cpp  RenderBase.cpp  RenderPassShadingRate.cpp  RenderPassTemplate.cpp  RenderPassTest.cpp  Swapchain.cpp  Thread.cpp  Utils.cpp  WindowImpl.cpp  WindowTemplate.cpp
code/demo/Inc/: Camera.h  DrawAttachmentShadingRateThread.h  DrawPipelineShadingRateThread.h  DrawRotateQuad.h  DrawScenePBR.h  DrawSceneTest.h  DrawTextureMsaa.h  DrawTextureThread.h  DrawTriangleThread.h  TestMesh.h
code/demo/Shaders/: DrawMesh.frag  DrawMesh.vert  DrawTriangleTest.vert  ScreenQuad.frag
code/demo/Src/: Camera.cpp  DrawAttachmentShadingRateThread.cpp  DrawPipelineShadingRateThread.cpp  DrawRotateQuad.cpp  DrawScenePBR.cpp  DrawSceneTest.cpp  DrawTextureMsaa.cpp  DrawTextureThread.cpp  TestMesh.cpp
code/framework/Inc/: AppDispatchTable.h  BufferCreator.h  Camera.h  DebugUtils.h  Device.h  GraphicsPipelineConfig.h  GraphicsPipelineConfigInfo.h  Log.h  Mesh.h  PhysicalDevice.h  PipelineFactory.h  RenderBase.h  RenderThread.h  SceneDemoConfig.h  SceneRenderBase.h  SceneRenderHeaders.h  Swapchain.h  TestMesh.h  Thread.h  Utils.h  VmaUsage.h  VulkanInitializers.h  WindowImpl.h  WindowTemplate.h  frameworkHeaders.h
code/framework/Src/: BufferCreator.cpp  Camera.cpp  DebugUtils.cpp  Device.cpp  GraphicsPipelineConfig.cpp  GraphicsPipelineConfigInfo.cpp  Main.cpp  PhysicalDevice.cpp  PipelineFactory.cpp  RenderBase.cpp  RenderThread.cpp  ShaderModuleFactory.cpp  Swapchain.cpp  TestMesh.cpp  Thread.cpp  Utils.cpp  VmaUsage.cpp  WindowImpl.cpp  WindowTemplate.cpp
code/scene_demo/Shaders/: DrawMeshDefuse.frag  DrawTextureTest.frag  ScreenQuad.vert  compile.bat
code/scene_demo/draw_rotate_quad/: compile_shader.bat
code/scene_demo/draw_rotate_quad/Inc/: DrawRotateQuad.h  SceneDemoDefs.h
code/scene_demo/draw_rotate_quad/Src/: DrawRotateQuad.cpp
code/scene_demo/draw_scene_pbr/: compile_shader.bat
code/scene_demo/draw_scene_pbr/Inc/: DrawScenePBR.h  SceneDemoDefs.h
code/scene_demo/draw_scene_pbr/Shaders/: DrawMesh.vert  DrawMeshGlossy.frag  pbr_width_texture.frag  pbr_width_texture.vert
code/scene_demo/draw_scene_pbr/Spirv/: DrawMesh.vert.spv  pbr_width_texture.frag.spv  pbr_width_texture.vert.spv
code/scene_demo/draw_scene_pbr/Src/: DrawScenePBR.cpp
code/scene_demo/draw_scene_test/: compile_shader.bat
code/scene_demo/draw_scene_test/Inc/: DrawSceneTest.h  SceneDemoDefs.h
code/scene_demo/draw_scene_test/Shaders/: DrawMesh.vert
code/scene_demo/draw_scene_test/Spirv/: DrawMesh.frag.spv  DrawMesh.vert.spv
code/scene_demo/draw_scene_test/Src/: DrawSceneTest.cpp
code/scene_demo/draw_texture_msaa/: compile_shader.bat
code/scene_demo/draw_texture_msaa/Inc/: DrawTextureMsaa.h  SceneDemoDefs.h
code/scene_demo/draw_texture_msaa/Shaders/: DrawTextureTest.vert
code/scene_demo/draw_texture_msaa/Spirv/: DrawTextureTest.frag.spv
code/scene_demo/draw_texture_msaa/Src/: DrawTextureMsaa.cpp
code/scene_demo/draw_vrs_test/: compile_shader.bat
code/scene_demo/draw_vrs_test/Inc/: DescriptorSetManager.h  DrawVrsTest.h  SceneDemoDefs.h  VrsPipeline.h
code/scene_demo/draw_vrs_test/Shaders/: blend_vrs_image.frag  draw_vrs_region.comp  draw_vrs_region.frag  pbr_width_texture.frag  smooth_shading_rate.comp
scripts/: build_sln.bat  (+1 more)
(+19 files in other folders)
